# kolokwium

Zad2/: Makefile
Zad2/zad2/: CMakeLists.txt
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libtest
zad4/: CMakeLists.txt
